show more functionality

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,4 +42,11 @@ table .size {
   .reasons {
     white-space: nowrap;
   }
+
+  .show-more {
+    margin-top: 7px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+  }
 }
